chore: added remaining fields in formadata:
