# src/validations/commentValidation/comment.schema.js
@@ -1,5 +1,6 @@
 import joi from 'joi'
 
 export const commentSchema = joi.object({
+  fullname: joi.string().required().empty(),
   description: joi.string().max(200).required().empty(),
 });
